[project]
name = "al-futtaim-concierge"
version = "0.1.0"
description = "Al Futtaim Automotive Concierge — service & sales conversational agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.138.1",
    "groq>=0.37.1",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langgraph>=1.2.6",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "uvicorn>=0.49.0",
]
